[gd_scene load_steps=29 format=3 uid="uid://bsax0rf0shie"]

[ext_resource type="Script" path="res://menus/MainMenu3D.gd" id="1"]
[ext_resource type="Theme" uid="uid://b4yu237ua3sml" path="res://Theme_Game_Min.tres" id="2"]
[ext_resource type="Script" path="res://menus/ScaledViewport.gd" id="2_8711a"]
[ext_resource type="Script" path="res://scripts/3DUIQuad.gd" id="3"]
[ext_resource type="Texture2D" uid="uid://4ayk4syw8k14" path="res://graphics/predarkenedbg.png" id="4"]
[ext_resource type="PackedScene" uid="uid://d2xoywdaxsuvs" path="res://menus/MainMenuVisualizer.tscn" id="5"]
[ext_resource type="Texture2D" uid="uid://cpv1kmmpnhti5" path="res://graphics/default_avatar.png" id="6"]
[ext_resource type="Script" path="res://menus/GLES2ViewportRTHack.gd" id="7"]
[ext_resource type="Script" path="res://rythm_game/SongBackground.gd" id="8"]
[ext_resource type="PackedScene" uid="uid://s460eaf516lj" path="res://menus/MainMenuUserInfo.tscn" id="9"]
[ext_resource type="PackedScene" uid="uid://ddwcdis3ndvvm" path="res://menus/music_player/MainMenuMusicPlayer.tscn" id="10"]
[ext_resource type="PackedScene" uid="uid://cqek6mlx05vhe" path="res://menus/LogoVisualizer.tscn" id="12"]

[sub_resource type="Environment" id="Environment_i7ayv"]
background_mode = 3

[sub_resource type="ViewportTexture" id="ViewportTexture_6fpf8"]
viewport_path = NodePath("ViewportLeft")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_57r4k"]
resource_local_to_scene = true
transparency = 1
shading_mode = 0
albedo_texture = SubResource("ViewportTexture_6fpf8")

[sub_resource type="QuadMesh" id="1"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_57r4k")
size = Vector2(1.6, 0.9)

[sub_resource type="BoxShape3D" id="4"]
size = Vector3(1.6, 0.9, 0.01)

[sub_resource type="ViewportTexture" id="ViewportTexture_bsm36"]
viewport_path = NodePath("ViewportRight")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xaq6o"]
resource_local_to_scene = true
transparency = 1
shading_mode = 0
albedo_texture = SubResource("ViewportTexture_bsm36")

[sub_resource type="QuadMesh" id="5"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_xaq6o")
size = Vector2(0.45, 0.9)

[sub_resource type="BoxShape3D" id="8"]
size = Vector3(0.45, 0.9, 0.02)

[sub_resource type="Animation" id="9"]
length = 0.3

[sub_resource type="Animation" id="10"]
length = 0.3

[sub_resource type="Animation" id="11"]
length = 0.3

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x685u"]
_data = {
"def": SubResource("9"),
"fade_in": SubResource("10"),
"fade_out": SubResource("11")
}

[sub_resource type="StyleBoxFlat" id="13"]
bg_color = Color(0.129412, 0.0705882, 0.258824, 1)

[sub_resource type="Animation" id="14"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background1:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Background2:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lghsi"]
_data = {
"1to2": SubResource("14")
}

[node name="MainMenu3D" type="Node3D"]
script = ExtResource("1")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_i7ayv")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1)
current = true
fov = 47.0
size = 0.9

[node name="ViewportLeft" type="SubViewport" parent="."]
disable_3d = true
transparent_bg = true
size = Vector2i(1920, 1080)
script = ExtResource("2_8711a")

[node name="MenuLeftContainer" type="MarginContainer" parent="ViewportLeft"]
custom_minimum_size = Vector2(1760, 1080)
offset_left = 100.0
offset_right = -59.9999
size_flags_horizontal = 3
theme = ExtResource("2")
theme_override_constants/margin_left = 0

[node name="ViewportRight" type="SubViewport" parent="."]
disable_3d = true
transparent_bg = true
size = Vector2i(720, 1440)
script = ExtResource("2_8711a")

[node name="MenuRightContainer" type="MarginContainer" parent="ViewportRight"]
custom_minimum_size = Vector2(720, 1440)
offset_right = 6.10352e-05
offset_bottom = 0.00012207
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="ViewportRight/MenuRightContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 30

[node name="UserInfo" parent="ViewportRight/MenuRightContainer/VBoxContainer" instance=ExtResource("9")]
layout_mode = 2

[node name="Control" type="Control" parent="ViewportRight/MenuRightContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AreaLeft" type="Area3D" parent="." node_paths=PackedStringArray("node_viewport", "node_quad", "node_area")]
transform = Transform3D(0.984808, 0, 0.173648, 0, 1, 0, -0.173648, 0, 0.984808, -0.24791, 0, -0.518273)
script = ExtResource("3")
node_viewport = NodePath("../ViewportLeft")
node_quad = NodePath("MeshInstance3D")
node_area = NodePath(".")

[node name="MeshInstance3D" type="MeshInstance3D" parent="AreaLeft"]
transform = Transform3D(1, 0, 2.98023e-08, 0, 1, 0, -2.98023e-08, 0, 1, 0, 0, 0.0118276)
mesh = SubResource("1")
skeleton = NodePath("")
script = ExtResource("7")

[node name="CollisionShape3D" type="CollisionShape3D" parent="AreaLeft"]
transform = Transform3D(1, 0, 2.98023e-08, 0, 1, 0, -2.98023e-08, 0, 1, 0.00420609, -0.0040324, 0.00213248)
shape = SubResource("4")

[node name="AreaRight" type="Area3D" parent="." node_paths=PackedStringArray("node_viewport", "node_quad", "node_area")]
transform = Transform3D(0.984808, 0, -0.173648, 0, 1, 0, 0.173648, 0, 0.984808, 0.651739, 0, -0.235812)
script = ExtResource("3")
node_viewport = NodePath("../ViewportRight")
node_quad = NodePath("MeshInstance3D")
node_area = NodePath(".")

[node name="MeshInstance3D" type="MeshInstance3D" parent="AreaRight"]
transform = Transform3D(1, 0, -2.98023e-08, 0, 1, 0, 2.98023e-08, 0, 1, 5.96046e-08, 0, 0.00996158)
mesh = SubResource("5")
skeleton = NodePath("")
script = ExtResource("7")

[node name="CollisionShape3D" type="CollisionShape3D" parent="AreaRight"]
transform = Transform3D(1, 0, -2.98023e-08, 0, 1, 0, 2.98023e-08, 0, 1, 0, 0, 0)
shape = SubResource("8")

[node name="SongListPreviewAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_x685u")
}

[node name="FullscreenMenuContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -128

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme_override_styles/panel = SubResource("13")

[node name="Background1" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource("4")
expand_mode = 1
stretch_mode = 6
script = ExtResource("8")

[node name="Background2" type="TextureRect" parent="CanvasLayer"]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource("6")
expand_mode = 1
stretch_mode = 6
script = ExtResource("8")

[node name="MainMenuVisualizer2" parent="CanvasLayer" instance=ExtResource("5")]
mouse_filter = 2

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
ratio = 0.665

[node name="Control" parent="CanvasLayer/AspectRatioContainer" instance=ExtResource("12")]
layout_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer"]
libraries = {
"": SubResource("AnimationLibrary_lghsi")
}

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
visible = false

[node name="MainMenuMusicPlayer" parent="CanvasLayer2" instance=ExtResource("10")]
grow_horizontal = 2
grow_vertical = 2
